crates/parser/src/tests/snapshots/parser__tests__grammar__state_loop_exits_on_its_tail_expr.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ for acc := 0 { if acc == 10 { acc } else { cont acc + 1 } } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(IterateExpr),
        KwFor(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(IfExpr),
        KwIf(1),
        Enter(ChainExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        EqEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Enter(ElseClause),
        KwElse(1),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ContinueExpr),
        KwCont(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
