crates/parser/src/tests/snapshots/parser__tests__grammar__state_loop_takes_patterns_and_labels.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ 'outer: for { i, total } := { i: 0, total: 0 } { for inner := 0 { cont 'outer { i: i + 1, total: total + inner } } } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(LabeledExpr),
        Label(1),
        Colon(1),
        Enter(IterateExpr),
        KwFor(1),
        Enter(RecordPat),
        OpenBrace(1),
        Enter(PatField),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Comma(1),
        Enter(PatField),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        ColonEq(2),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Comma(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(IterateExpr),
        KwFor(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonEq(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ContinueExpr),
        KwCont(1),
        Label(1),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
