crates/parser/src/tests/snapshots/parser__tests__grammar__struct_expr_disambiguation.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ { name: value }; { nested: { other: value } }; { name: (a + b), other: [x; y] } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(StructExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(StructExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(StructExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(StructExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(ParenExpr),
        OpenParen(1),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Comma(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(RepeatExpr),
        OpenBrack(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
