crates/parser/src/tests/snapshots/parser__tests__grammar__tuple_field_access_by_name.snap
---
source: crates/parser/src/tests/grammar.rs
description: tup._0
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
    ],
    errors: [],
}
