crates/parser/src/tests/snapshots/parser__tests__grammar__tuple_type.snap
---
source: crates/parser/src/tests/grammar.rs
description: "T: type = (Int, next: Int);"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(TupleType),
        OpenParen(1),
        Enter(TypeField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(TypeField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
