crates/parser/src/tests/snapshots/parser__tests__grammar__underscore_mod_decl_is_rejected.snap
---
source: crates/parser/src/tests/grammar.rs
description: "_: mod;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Error(0),
        Underscore(1),
        Error(1),
        Colon(1),
        Error(2),
        KwMod(1),
        Enter(EmptyItem),
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Underscore,
        },
        Expected {
            expected: Ident,
            actual: Colon,
        },
        Expected {
            expected: Ident,
            actual: KwMod,
        },
    ],
}
