crates/parser/src/tests/snapshots/parser__tests__grammar__using_items.snap
---
source: crates/parser/src/tests/grammar.rs
description: "using foo; using foo::bar as baz; using foo::_; using foo::{bar, baz as qux, nested::{one, two}}; #[prelude] pub using ::root::prelude;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(Rename),
        KwAs(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Exit,
        Underscore(1),
        Exit,
        Semi(1),
        Exit,
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Exit,
        Enter(UsingTreeList),
        OpenBrace(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(Rename),
        KwAs(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Exit,
        Enter(UsingTreeList),
        OpenBrace(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(UsingItem),
        Enter(Attr),
        Hash(1),
        Enter(AttrInner),
        OpenBrack(1),
        Enter(AttrItem),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Enter(Visibility),
        KwPub(1),
        Exit,
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
